--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,8 +36,8 @@
         android:src="@drawable/ic_beach"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="153dp"
-        app:layout_constraintLeft_toRightOf="@+id/id_news"
-        app:layout_constraintRight_toLeftOf="@+id/id_weather" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,9 +45,9 @@
         android:text="@string/beach"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/id_beach"
-        app:layout_constraintLeft_toRightOf="@+id/textViewNews"
         android:id="@+id/textViewBeach"
-        app:layout_constraintRight_toLeftOf="@+id/textViewWeather" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
         android:layout_width="53dp"
@@ -79,7 +79,6 @@
         android:src="@drawable/ic_calendar"
         android:layout_marginTop="41dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewNews"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/id_news"
         android:id="@+id/id_events" />
     <TextView
@@ -91,7 +90,6 @@
 
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/id_events"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/textViewNews" />
     <com.mangu.personalcityhelper.ui.common.ErrorView
         android:id="@+id/view_error"
@@ -101,6 +99,19 @@
         app:layout_constraintTop_toBottomOf="parent"
         android:visibility="gone" />
 
-
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/change_language"
+    android:id="@+id/btn_change_language"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_marginBottom="16dp"
+    android:layout_marginLeft="8dp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    android:layout_marginRight="8dp"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintHorizontal_bias="0.502"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp" />
 
 </android.support.constraint.ConstraintLayout>
