--- a/app/src/main/res/layout/activity_beach.xml
+++ b/app/src/main/res/layout/activity_beach.xml
@@ -12,6 +12,8 @@
         android:id="@+id/view_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="-60dp"
+
         android:visibility="gone"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
@@ -20,7 +22,6 @@
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:indeterminate="true"
         android:translationZ="2dp"
