--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
-
         android:text="@string/weather"
         android:textStyle="bold|italic"
         app:layout_constraintLeft_toRightOf="@+id/textViewBeach"
@@ -103,6 +102,45 @@
         android:layout_marginTop="41dp"
         android:contentDescription="@string/transport"
         android:src="@drawable/ic_transport"
+        app:layout_constraintLeft_toRightOf="@+id/id_events"
+        app:layout_constraintTop_toBottomOf="@id/textViewBeach"
+        android:layout_marginStart="73dp" />
+
+    <TextView
+        android:id="@+id/textViewTransport"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/transport"
+
+        android:textStyle="bold|italic"
+        app:layout_constraintLeft_toRightOf="@+id/textViewCalendar"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/id_transport" />
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/id_important"
+        android:src="@drawable/ic_important"
+        android:contentDescription="@string/important_information"
+        android:layout_marginTop="251dp"
+        app:layout_constraintLeft_toRightOf="@id/id_transport"
+        app:layout_constraintTop_toBottomOf="@id/textViewWeather"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="80dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/important_information"
+        android:id="@+id/textViewImportant"
+        android:textStyle="bold|italic"
+        android:gravity="center"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/id_important"
+        app:layout_constraintLeft_toRightOf="@id/textViewTransport"
 
         />
 
