--- a/app/src/main/res/layout-v21/activity_transport.xml
+++ b/app/src/main/res/layout-v21/activity_transport.xml
@@ -1,33 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent">-->
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/relative"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relative"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:context="com.mangu.personalcityhelper.ui.transport.TransportActivity">
+
+    <com.mangu.personalcityhelper.ui.common.ErrorView
+        android:id="@+id/view_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-60dp"
+        android:visibility="gone"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:translationZ="2dp"
+        android:visibility="gone" />
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context="com.mangu.personalcityhelper.ui.transport.TransportActivity">
-
-        <com.mangu.personalcityhelper.ui.common.ErrorView
-            android:id="@+id/view_error"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="-60dp"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
-
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center"
-            android:indeterminate="true"
-            android:translationZ="2dp"
-            android:visibility="gone" />
-    </RelativeLayout>
-</ScrollView>
+        android:id="@+id/listView"/>
+</RelativeLayout>
+    <!--</ScrollView>-->
 
