--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/id_news"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="153dp"
+        android:layout_marginTop="123dp"
         android:contentDescription="@string/news"
         android:src="@drawable/ic_news"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/id_beach"
         android:layout_width="39dp"
         android:layout_height="32dp"
-        android:layout_marginTop="153dp"
+        android:layout_marginTop="123dp"
         android:contentDescription="@string/beach"
         android:src="@drawable/ic_beach"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -55,7 +55,7 @@
         android:id="@+id/id_weather"
         android:layout_width="53dp"
         android:layout_height="26dp"
-        android:layout_marginTop="153dp"
+        android:layout_marginTop="123dp"
         android:contentDescription="@string/weather"
         android:src="@drawable/ic_weather"
         app:layout_constraintLeft_toRightOf="@+id/id_beach"
@@ -76,7 +76,6 @@
     <ImageView
         android:id="@+id/id_events"
         android:layout_width="0dp"
-
         android:layout_height="wrap_content"
         android:layout_marginTop="41dp"
         android:contentDescription="@string/calendar"
@@ -90,60 +89,80 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/calendar"
-
         android:textStyle="bold|italic"
         app:layout_constraintLeft_toLeftOf="@+id/textViewNews"
         app:layout_constraintTop_toBottomOf="@+id/id_events" />
 
     <ImageView
+        android:id="@+id/id_transport"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/id_transport"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="41dp"
         android:contentDescription="@string/transport"
         android:src="@drawable/ic_transport"
         app:layout_constraintLeft_toRightOf="@+id/id_events"
-        app:layout_constraintTop_toBottomOf="@id/textViewBeach"
-        android:layout_marginStart="73dp" />
+        app:layout_constraintRight_toLeftOf="@id/id_important"
+        app:layout_constraintTop_toBottomOf="@id/textViewBeach" />
 
     <TextView
         android:id="@+id/textViewTransport"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/transport"
-
-        android:textStyle="bold|italic"
-        app:layout_constraintLeft_toRightOf="@+id/textViewCalendar"
         android:layout_marginStart="51dp"
         android:layout_marginTop="8dp"
+        android:text="@string/transport"
+        android:textStyle="bold|italic"
+        app:layout_constraintLeft_toRightOf="@+id/textViewCalendar"
         app:layout_constraintTop_toBottomOf="@+id/id_transport" />
 
     <ImageView
+        android:id="@+id/id_important"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/id_important"
-        android:src="@drawable/ic_important"
+        android:layout_marginEnd="35dp"
+        android:layout_marginTop="221dp"
         android:contentDescription="@string/important_information"
-        android:layout_marginTop="251dp"
+        android:src="@drawable/ic_important"
         app:layout_constraintLeft_toRightOf="@id/id_transport"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewWeather"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="80dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textViewImportant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/important_information"
-        android:id="@+id/textViewImportant"
-        android:textStyle="bold|italic"
-        android:gravity="center"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/id_important"
+        android:gravity="center"
+        android:text="@string/important_information"
+        android:textStyle="bold|italic"
         app:layout_constraintLeft_toRightOf="@id/textViewTransport"
-
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/id_important"
         />
-
+    <ImageView
+        android:id="@+id/id_places"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_near"
+        android:contentDescription="@string/interesting"
+        android:layout_marginTop="55dp"
+        app:layout_constraintTop_toBottomOf="@id/id_events"
+        app:layout_constraintLeft_toLeftOf="@id/id_events"
+        app:layout_constraintRight_toRightOf="@id/id_events"
+        />
+    <TextView
+        android:id="@+id/tv_places"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/interesting"
+        android:textStyle="bold|italic"
+        app:layout_constraintTop_toBottomOf="@id/id_places"
+        app:layout_constraintLeft_toLeftOf="@id/textViewCalendar"
+        app:layout_constraintRight_toRightOf="@id/textViewCalendar"
+        />
     <com.mangu.personalcityhelper.ui.common.ErrorView
         android:id="@+id/view_error"
         android:layout_width="wrap_content"
